[tool.poetry]
name = "incolume.py.cowboy"
version = "1.0.0"
description = ""
authors = ["Rafael Bortoli <@rafaelbortoli21>", "Britodfbr <britodfbr@gmail.com>"]
packages = [
{include='incolume/py', from=''}
]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
